Bug 204707 - RTL8822CE cannot discover pair-able devices
Summary: RTL8822CE cannot discover pair-able devices
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Bluetooth (show other bugs)
Hardware: x86-64 Linux
: P1 high
Assignee: linux-bluetooth@vger.kernel.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-27 08:23 UTC by jian-hong
Modified: 2019-09-05 02:47 UTC (History)
0 users

See Also:
Kernel Version: 5.3.0-rc6
Subsystem:
Regression: No
Bisected commit-id:


Attachments
The dmesg file with 5.3.0-rc6 kernel (67.58 KB, text/plain)
2019-08-27 08:23 UTC, jian-hong
Details
lsusb of the BT adapter (8.83 KB, text/plain)
2019-08-27 08:25 UTC, jian-hong
Details
btmon log (364.00 KB, text/plain)
2019-08-27 08:42 UTC, jian-hong
Details

Description jian-hong 2019-08-27 08:23:45 UTC
Created attachment 284625 [details]
The dmesg file with 5.3.0-rc6 kernel

We have a laptop equipped with Intel i3-10110U CPU and Realtek 8822CE WiFi/BT combo chip.

I have tested with 5.3.0-rc6 mainline kernel and the firmware from the commits:
aa703aad295d rtl_bt: Update RTL8822C BT FW to V0x098A_94A4
7e431c5dee00 rtw88: RTL8822C: add WoW firmware v7.3
2dc7023fd529 rtw88: RTL8822C: update rtw8822c_fw.bin to v7.3

However, system cannot discover any pair-able BT device.  For example, our "pulse" BT headset, which can be discovered and paired on other laptops.

bluetoothctl 
Agent registered
[bluetooth]# show
Controller 3C:91:80:AA:80:E0 (public)
	Name: endless
	Alias: endless
	Class: 0x0008010c
	Powered: yes
	Discoverable: yes
	Pairable: yes
	UUID: Audio Source              (0000110a-0000-1000-8000-00805f9b34fb)
	UUID: Generic Attribute Profile (00001801-0000-1000-8000-00805f9b34fb)
	UUID: Generic Access Profile    (00001800-0000-1000-8000-00805f9b34fb)
	UUID: PnP Information           (00001200-0000-1000-8000-00805f9b34fb)
	UUID: A/V Remote Control Target (0000110c-0000-1000-8000-00805f9b34fb)
	UUID: A/V Remote Control        (0000110e-0000-1000-8000-00805f9b34fb)
	Modalias: usb:v1D6Bp0246d0532
	Discovering: no
[bluetooth]# scan on
Discovery started
[CHG] Controller 3C:91:80:AA:80:E0 Discovering: yes
[NEW] Device 38:F9:D3:1B:1E:E1 38-F9-D3-1B-1E-E1
[NEW] Device 67:25:04:4E:E3:83 67-25-04-4E-E3-83
[CHG] Device 38:F9:D3:1B:1E:E1 RSSI: -40
[NEW] Device 7E:01:A3:AE:F0:76 7E-01-A3-AE-F0-76
[CHG] Device 67:25:04:4E:E3:83 RSSI: -72
[CHG] Device 7E:01:A3:AE:F0:76 RSSI: -66
[CHG] Device 3F:59:C8:72:74:D7 RSSI: -66
[CHG] Device 3F:59:C8:72:74:D7 UUIDs: 0000181a-0000-1000-8000-00805f9b34fb
[CHG] Device 3F:59:C8:72:74:D7 ServiceData Key: 0000fe95-0000-1000-8000-00805f9b34fb
[CHG] Device 3F:59:C8:72:74:D7 ServiceData Value:
  70 20 5b 04 a5 d7 74 72 c8 59 3f 09 06 10 02 6c  p [...tr.Y?....l
  02                                               .               
[NEW] Device 43:31:ED:A4:B4:49 43-31-ED-A4-B4-49
[NEW] Device 4A:BF:0E:E8:89:4F 4A-BF-0E-E8-89-4F
[NEW] Device 76:08:71:6E:38:D5 76-08-71-6E-38-D5
[CHG] Device 67:25:04:4E:E3:83 RSSI: -64
...
[bluetooth]# devices
Device 3F:59:C8:72:74:D7 LYWSD02
Device 38:F9:D3:1B:1E:E1 38-F9-D3-1B-1E-E1
Device 67:25:04:4E:E3:83 67-25-04-4E-E3-83
Device 7E:01:A3:AE:F0:76 7E-01-A3-AE-F0-76
Device 43:31:ED:A4:B4:49 43-31-ED-A4-B4-49
Device 4A:BF:0E:E8:89:4F 4A-BF-0E-E8-89-4F
Device 76:08:71:6E:38:D5 76-08-71-6E-38-D5
Device 7E:AE:93:95:B3:72 7E-AE-93-95-B3-72

Here is the RTL8822CE information:

sudo lspci -nnvs 02:00.0
02:00.0 Network controller [0280]: Realtek Semiconductor Co., Ltd. Device [10ec:c822]
	Subsystem: Lite-On Communications Inc Device [11ad:0810]
	Flags: bus master, fast devsel, latency 0, IRQ 17
	I/O ports at 3000 [size=256]
	Memory at b1100000 (64-bit, non-prefetchable) [size=64K]
	Capabilities: [40] Power Management version 3
	Capabilities: [50] MSI: Enable- Count=1/1 Maskable- 64bit+
	Capabilities: [70] Express Endpoint, MSI 00
	Capabilities: [100] Advanced Error Reporting
	Capabilities: [148] Device Serial Number 00-e0-4c-ff-fe-c8-22-01
	Capabilities: [158] Latency Tolerance Reporting
	Capabilities: [160] L1 PM Substates
	Kernel driver in use: rtw_pci
	Kernel modules: rtwpci
Comment 1 jian-hong 2019-08-27 08:25:01 UTC
Created attachment 284627 [details]
lsusb of the BT adapter
Comment 2 jian-hong 2019-08-27 08:42:01 UTC
Created attachment 284629 [details]
btmon log
Comment 3 jian-hong 2019-09-05 02:47:42 UTC
I have sent the patch and it is merged.
https://lkml.org/lkml/2019/9/3/258

Note You need to log in before you can comment on or make changes to this bug.